// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders correctly with align 1`] = `
<div
  className="typography primary center singleLineEllipsis mediumNormal"
  data-testid="text"
>
  text
</div>
`;

exports[`Text renders correctly with color 1`] = `
<div
  className="typography secondary start singleLineEllipsis mediumNormal"
  data-testid="text"
>
  text
</div>
`;

exports[`Text renders correctly with element 1`] = `
<p
  className="typography primary start singleLineEllipsis mediumNormal"
  data-testid="text"
>
  text
</p>
`;

exports[`Text renders correctly with element as children 1`] = `
<div
  className="typography primary start singleLineEllipsis mediumNormal"
  data-testid="text"
>
  <div>
    text
  </div>
</div>
`;

exports[`Text renders correctly with empty props 1`] = `
<div
  className="typography primary start singleLineEllipsis mediumNormal"
  data-testid="text"
/>
`;

exports[`Text renders correctly with paragraph 1`] = `
<p
  className="typography primary start mediumNormal"
  data-testid="text"
>
  text
</p>
`;

exports[`Text renders correctly with size 1`] = `
<div
  className="typography primary start singleLineEllipsis smallNormal"
  data-testid="text"
>
  text
</div>
`;

exports[`Text renders correctly with weight 1`] = `
<div
  className="typography primary start singleLineEllipsis mediumBold"
  data-testid="text"
>
  text
</div>
`;
